# app2.0

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh-CN.md  build.bat  eslint.config.js  package-lock.json  package.json  platforms-config.json  tsconfig.build-main.json  tsconfig.build-renderer.json  tsconfig.json  v-debug.bat  v-start.bat
.toonflow-user-data/: DIPS-wal  Local State
chromium-fork/: README.md  args.gn  version-lock.json
chromium-fork/overlay/chrome/browser/ui/views/frame/: ai_free_runtime_bridge_win.h
chromium-fork/patches/: 0001-ai-free-branding.patch  0001a-ai-free-ui-strings.patch  0002-ai-free-runtime-switches.patch  0003-ai-free-runtime-pipe.patch  0005-ai-free-windows-icon.patch  0006-ai-free-embedded-input-activation.patch  series
chromium-fork/scripts/: apply-patches.ps1  check-environment.ps1  common.ps1  stage-runtime.ps1  sync-source.ps1
config/: platforms-config.json
control-panel/: README.md  index.html  (+1 more)
native/cursor-host/: CMakeLists.txt  README.md
native/cursor-host/src/: arguments.cc  arguments.h  cursor_asset_cache.cc  cursor_asset_cache.h  cursor_state_store.cc  cursor_state_store.h  cursor_ui_state.cc  cursor_ui_state.h  dcomp_renderer.cc  dcomp_renderer.h  frame_metrics.cc  frame_metrics.h  input_sampler.cc  input_sampler.h  main.cc  pipe_security.cc  pipe_security.h  pipe_server.cc  pipe_server.h  protocol.cc  protocol.h  recovery_watchdog.cc  recovery_watchdog.h  system_cursor_lease.cc  system_cursor_lease.h  target_window_resolver.cc  target_window_resolver.h
native/cursor-host/test/: protocol_test.cc
(+1088 files in other folders)
