is_debug = false
is_component_build = false
is_official_build = true
target_cpu = "x64"
symbol_level = 0
blink_symbol_level = 0
v8_symbol_level = 0
chrome_pgo_phase = 0
use_thin_lto = false
use_siso = false
use_remoteexec = false
is_chrome_branded = false
proprietary_codecs = false
ffmpeg_branding = "Chromium"
enable_widevine = false
treat_warnings_as_errors = false
